--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: kotlin
+language: java
 
 jdk:
   - oraclejdk8
@@ -6,10 +6,12 @@ jdk:
 sudo: true
 
 before_install:
+  # 赋予执行权限
   - chmod a+x gradlew
 
 script:
-  - "./gradlew assemble"
+  # 清理、生成、测试、文档
+  - ./gradlew clean build dokka
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -19,5 +21,15 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+deploy:
+  # 发布到 GitHub Release
+  - provider:     releases
+    skip_cleanup: true
+    file_glob:    true
+    file:         "build/libs/*"
+    api_key:      $GitHubToken
+    on:
+      tags:       true
+
 notifications:
-   webhooks: https://oapi.dingtalk.com/robot/send?access_token=4b59c5ece57fc88af8fda28cc07573c4caf525aa69afc0cc888ccf3ce6dbe41b
+  webhooks: https://oapi.dingtalk.com/robot/send?access_token=4b59c5ece57fc88af8fda28cc07573c4caf525aa69afc0cc888ccf3ce6dbe41b
