--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,20 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.novoda:bintray-release:0.8.1'
-        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.17'
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:+'
+        classpath 'com.novoda:bintray-release:+'
     }
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.2.70'
+    id 'org.jetbrains.kotlin.jvm' version '1.2.+'
 }
 
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'com.novoda.bintray-release'
 
 group 'org.mechdancer'
-version '0.1.1-SNAPSHOT'
+version '0.1.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '+'
 }
 
 compileKotlin {
@@ -39,7 +39,7 @@ publish {
     userOrg = 'mechdancer'
     groupId = 'org.mechdancer'
     artifactId = 'statemachine'
-    publishVersion = '0.1.1'
+    publishVersion = '0.1.2'
     desc = 'statemachine kotlin framework'
     website = 'https://github.com/MechDancer/statemachine'
 }
