--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,32 @@
 buildscript {
+    ext.kotlin_version = '1.2.+'
+
     repositories {
         mavenCentral()
+        jcenter()
     }
-
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.jetbrains.dokka:dokka-gradle-plugin:+'
         classpath 'com.novoda:bintray-release:+'
     }
 }
 
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.2.+'
-}
-
-apply plugin: 'org.jetbrains.dokka'
-apply plugin: 'com.novoda.bintray-release'
-
 group 'org.mechdancer'
 version '0.1.2-SNAPSHOT'
+
+apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'com.novoda.bintray-release'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '+'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    testCompile "junit:junit:+"
 }
 
 compileKotlin {
