--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.2.60'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
 }
 
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'com.novoda.bintray-release'
 
 group 'org.mechdancer'
-version '0.1.0-SNAPSHOT'
+version '0.1.1'
 
 repositories {
     mavenCentral()
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.24.0"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -45,7 +45,7 @@ publish {
     userOrg = 'mechdancer'
     groupId = 'org.mechdancer'
     artifactId = 'statemachine'
-    publishVersion = '0.1.0'
+    publishVersion = '0.1.1'
     desc = 'statemachine kotlin framework'
     website = 'https://github.com/MechDancer/statemachine'
 }
