--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.+'
+    ext.kotlin_version = '1.3.10'
 
     repositories {
         mavenCentral()
@@ -13,7 +13,7 @@ buildscript {
 }
 
 group 'org.mechdancer'
-version '0.1.2-SNAPSHOT'
+version '0.1.3'
 
 apply plugin: 'kotlin'
 apply plugin: 'org.jetbrains.dokka'
@@ -40,12 +40,12 @@ publish {
     userOrg = 'mechdancer'
     groupId = 'org.mechdancer'
     artifactId = 'statemachine'
-    publishVersion = '0.1.2'
+    publishVersion = version.toString()
     desc = 'statemachine kotlin framework'
     website = 'https://github.com/MechDancer/statemachine'
 }
 
-dokka{
+dokka {
     outputFormat = 'html'
     outputDirectory = "$buildDir/javadoc"
 }
